added 2 codes and changed backend-5

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_BASE_URL=https://spark-ev-backend.onrender.com
 REACT_APP_API_URL=https://spark-ev-backend.onrender.com
+REACT_APP_API_BASE=https://spark-ev-backend.onrender.com
