--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "cra-template": "1.2.0",
     "crypto": "npm:crypto-browserify",
     "crypto-browserify": "^3.12.1",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
     "jwt-decode": "^4.0.0",
@@ -31,13 +32,14 @@
     "qr-scanner": "^1.4.2",
     "razorpay": "^2.9.5",
     "react": "^18.2.0",
+    "react-d3-speedometer": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^7.1.1",
-  "react-scripts": "5.0.1",
+    "react-scripts": "5.0.1",
     "rm": "^0.1.8",
     "serve": "^14.2.4",
     "stream": "npm:stream-browserify",
