refactored and fixed fetching active session

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,7 @@
     "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "rm": "^0.1.8",
     "serve": "^14.2.4",
     "stream": "npm:stream-browserify",
@@ -52,7 +52,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -77,5 +77,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "react-app-rewired": "^0.1.0"
+  },
+  "engines": {
+    "node": "22.14.0"
   }
 }
