--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "homepage": ".",
   "name": "frontend",
   "version": "0.1.0",
-  "proxy": "https://spark-ev-backend.onrender.com",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@blackbox-vision/react-qr-reader": "^5.0.0",
@@ -39,7 +39,7 @@
     "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "rm": "^0.1.8",
     "serve": "^14.2.4",
     "stream": "npm:stream-browserify",
